<resources>
    <string name="app_name">Wi-Fi Hotspot Finder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="openApp">Open App on Wear</string>
    <string name="wearPic">wearPic</string>
    <string name="homePostcode">Postcode Only</string>
    <string name="setHome">Set as Home</string>
    <string name="workPostcode">Postcode Only</string>
    <string name="setWork">Set as Work</string>
    <string name="title_activity_settings__layout">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about__page">About</string>
    <string name="about_content">This is an app made using Android Studio for a Computing A-Level Coursework. \n \nThe whole application is made within an academic year. The application is meant for those who want to obtain the nearest free Wi-Fi place in order to work at or go through social media without worrying about mobile data. \n \nThe application has been made for study purposes only. The application is here to give an idea about the application of smartwatches in real life situations and have been made for educational purposes with a potential consumer purpose in the future.</string>
    <string name="author">By Jawad Adnan</string>
    <string name="author_email">jawadadnan46@yahoo.com</string>
    <string name="image_view_nav_header">Shows the Application Icon</string>
    <string name="settings_nav_drawer">Settings</string>
    <string name="nav_drawer_group_header">Information</string>
    <string name="updates_nav_drawer">Check For Updates</string>
    <string name="about_nav_drawer">About</string>
    <string name="button_3">Update Wear Database</string>
    <string name="updateWearDatabase">Update Wear Database</string>
    <string name="user">Jawad Adnan</string>
    <string name="openWearApp">Open App on Wear</string>
</resources>
